--- a/index.html
+++ b/index.html
@@ -10,34 +10,72 @@
 
 </head>
 <body>
+<main>
+  <header>
+    <h1>Notification<span class="plural">s</span><span class="count">3</span></h1>
+    <button type="button" class="mark-all-read">Mark all as read</button>
+  </header>
 
-  Notifications 3
+  <a href="#" class="unread">
+    <img src="./assets/images/avatar-mark-webber.webp" alt="Mark Webber">
+    <div class="text-content">
+      <p><span class="user">Mark Webber</span><span class="activity"> reacted to your recent post My first tournament today!</span></p>
+      <p class="time">1m ago</p>
+    </div>
+  </a>
 
-  Mark all as read
+  <a href="#" class="unread">
+    <img src="./assets/images/avatar-angela-gray.webp" alt="Angela Gray">
+    <div class="text-content">
+      <p><span class="user">Angela Gray</span><span class="activity"> followed you</span><span class="dot"></span></p>
+      <p class="time">5m ago</p>
+    </div>
+  </a>
 
-  Mark Webber reacted to your recent post My first tournament today!
-  1m ago
+  <a href="#">
+    <img src="./assets/images/avatar-jacob-thompson.webp" alt="Jacob Thompson">
+    <div class="text-content">
+      <p><span class="user">Jacob Thompson</span> has joined your group <span class="activity chess">Chess Club</span><span class="dot"></span></p>
+      <p class="time">1 day ago</p>
+    </div>
+  </a>
 
-  Angela Gray followed you
-  5m ago
+  <a href="#">
+    <img src="./assets/images/avatar-rizky-hasanuddin.webp" alt="Rizky Hasanuddin">
+    <div class="text-content">
+      <p><span class="user">Rizky Hasanuddin</span><span class="activity"> sent you a private message</span></p>
+      <p class="time">5 days ago</p>
+      <p class="private">Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and 
+        I'm already having lots of fun and improving my game.</p>
+    </div>
+  </a>
 
-  Jacob Thompson has joined your group Chess Club
-  1 day ago
-
-  Rizky Hasanuddin sent you a private message
-  5 days ago
-  Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and 
-  I'm already having lots of fun and improving my game.
-
-  Kimberly Smith commented on your picture
-  1 week ago
-
-  Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate
-  2 weeks ago
-
-  Anna Kim left the group Chess Club
-  2 weeks ago
+  <a href="#">
+    <img src="./assets/images/avatar-kimberly-smith.webp" alt="Kimberly Smith">
+    <div class="text-content">
+      <p><span class="user">Kimberly Smith</span><span class="activity"> commented on your picture</span></p>
+      <p class="time">1 week ago</p>
+      <img src="./assets/images/image-chess.webp" alt="chess club" class="picture">
+    </div>
+  </a>
   
-<script src="script.js"></script>>
+  <a href="#">
+    <img src="./assets/images/avatar-nathan-peterson.webp" alt="Nathan Peterson">
+    <div class="text-content">
+      <p><span class="user">Nathan Peterson</span><span class="activity"> reacted to your recent post 5 end-game strategies to increase your win rate</span></p>
+      <p class="time">2 weeks ago</p>
+    </div>
+  </a>
+
+  <a href="#">
+    <img src="./assets/images/avatar-anna-kim.webp" alt="Anna Kim">
+    <div class="text-content">
+      <p><span class="user">Anna Kim</span><span class="activity"> left the group Chess Club</span></p>
+      <p class="time">2 weeks ago</p>
+    </div>
+  </a>
+</main>
+  
+<script src="script.js"></script>
 </body>
 </html>
